# salary-prediction-app

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  eda_feature_rules.ipynb  pyproject.toml  requirements.txt
.claude/: claude.md  settings.local.json
api/: main.py
data/: predictions.csv
model/: decision_tree_v1.joblib  decision_tree_v2.joblib  feature_mappings.joblib  randomforest_v1.joblib
notebooks/: SEF_week1_assignment.ipynb  eda_feature_rules.ipynb
pipeline/: generator.py  global_analyst.py  llm_analyst.py  orchestrator.py
streamlit/: dashboard.py
